test/tests/bad/unification-failed.carth
;; UnificationFailed

(data Integ (Integ Int))

(define type-mismatch (Integ True))
